--- a/styles.css
+++ b/styles.css
@@ -10,16 +10,16 @@
 div.wrapper
 {
 	position: relative;
-	background: #808080;
-	background-size: auto;
+	/*background: #808080;
+	background-size: auto; #eff4fd*/
 }
 
 div.wrapper-2
 {
-	position: relative;
+	background-position: bottom;
 	width: 100%;
 	height: 270px;
-	background: #eff4fd;
+	background: url(photos/limitless.JPG) no-repeat;
 }
 
 nav
@@ -93,18 +93,18 @@ div.images
 
 div.images img 
 {
-	height: 100%;
+	height: 90%;
 	position: absolute;
-	left: 80%;
-	bottom: 0;
+	left: 82%;
+	bottom: 3%;
 }
 
 div.images img.girl
 {
-	height: 100%;
+	height: 95%;
 	position: absolute;
 	left: 90%;
-	bottom: 0;
+	bottom: -2%;
 	transition: 0.5s;
 }
 
@@ -116,7 +116,7 @@ div.images img.girl:hover
 div.main-images{
 
 	margin-left: 5%;
-	margin-top: 15%;
+	margin-top: 10px;
 }
 
 div.main-images img{
@@ -223,7 +223,7 @@ div.icons img:hover
 div.workoutimg 
 {
 	margin-left: 5%;
-	margin-top: 15%;
+	margin-top: 10px;
 }
 
 div.workoutimg img
@@ -231,7 +231,8 @@ div.workoutimg img
 	width: 500px;
 	border: 10px solid black;
 	padding: 1px;
-	margin-top: 50px;
+	margin-top: 0px;
+
 }
 
 div.workoutdiscript
@@ -243,4 +244,95 @@ div.workoutdiscript
 div.workoutdiscript h2 b:hover
 {
 	color: skyblue;
+}
+div.footer 
+{
+	text-align: center;
+	clear: both;
+}
+
+div.backimage
+{
+	background: url(photos/background.JPG) no-repeat;
+	background-size: cover;
+	background-position: center;
+	width: 98%;
+	height: 650px;
+	text-align: center;
+	position: absolute;
+}
+
+div.imgLeft
+{
+	background: url(photos/eating.JPG) no-repeat;
+	display: block;
+	width: 500px;
+	height: 180px;
+	float: left;
+	margin: 0px 10px 10px 0;
+	padding: 10px;
+	border: 3px solid black;
+}
+
+div.imgRight
+{
+	background: url(photos/carbs.JPG) no-repeat;
+	float: right;
+	width: 400px;
+	height: 250px;
+	margin: 0px 0 10px 10px;
+	padding: 10px;
+	border: 3px solid black;
+}
+
+div.imgLeft1
+{
+	background: url(photos/protina.JPG) no-repeat;
+	display: block;
+	width: 500px;
+	height: 300px;
+	float: left;
+	margin: 10px 10px 10px 0;
+	padding: 10px;
+	border: 3px solid black;
+}
+
+div.right-side-bar
+{
+	width: 240px;
+	float: right;
+	height: 500px;
+	margin: 10px 0px 10px 10px;
+}
+
+div.right-side-bar ul
+{
+	margin: 0px;
+	padding: 20px;
+}
+
+div.right-side-bar ul li
+{
+	list-style-type: none;
+}
+
+div.right-side-bar ul li img
+{
+	width: 100%;
+	margin: 5% auto;
+	transition: 0.5s;
+}
+
+div.right-side-bar ul li img:hover
+{
+	transform: scale(1.5);
+}
+
+div.left-side-bar
+{
+	/*background-image: url(photos/gymrats.PNG) no-repeat;
+	background-size: contain;
+	width: 100%;
+	height: 400px;
+	float: left;*/
 }
