--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,11 @@ nav ul li a
 	margin: 20px;
 }
 
+nav ul li a.active
+{
+	color: skyblue;
+}
+
 nav ul li a:hover
 {
 	color: skyblue;
@@ -328,16 +333,27 @@ div.right-side-bar ul li img:hover
 	transform: scale(1.5);
 }
 
-div.left-side-bar
+div.contentClothes p 
 {
-	/*background-image: url(photos/gymrats.PNG) no-repeat;
-	background-size: contain;
-	width: 100%;
-	height: 400px;
-	float: left;*/
+	text-align: center;
 }
 
-div.ftips
+div.contentClothes img
 {
-	margin-top: 100px;
+	display: block;
+	width: 500px;
+	margin-left: auto;
+  	margin-right: auto;
+  	border: 10px solid black;
+}
+
+div.Ftips img 
+{
+	display: block;
+	width: 500px;
+	height: 180px;
+	float: left;
+	margin: 0px 10px 10px 0;
+	padding: 10px;
+	border: 3px solid black;
 }
